[package]
name = "ref-kman"
description = "Shared reference like Mutex"
author = "konkitoman"
version = "0.0.1"
license = "GPL-3.0"
repository = "https://github.com/konkitoman/ref-kman"
keywords = ["ref", "reference", "mutex"]
edition = "2021"

[dependencies]
atomic-wait = "1.0.1"

[[example]]
path = "examples/simple.rs"
name = "simple"

[[example]]
path = "examples/threading.rs"
name = "threading"

[[example]]
path = "examples/with_closure.rs"
name = "with_closure"
